tests/ui/parser/pat-lt-bracket-5.rs
fn main() {
    let v[0] = v[1]; //~ ERROR expected one of `:`, `;`, `=`, `@`, or `|`, found `[`
}

// ferrocene-annotations: fls_yivm43r5wnp1
// Let Statements
